--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,14 +32,12 @@
       <header>
          <div class="grid-item">
          <h1><a href="https://kushalsamant.github.io">KVSHVL</a></h1>
-<!--
             <p>
                <a href="https://kushalsamant.github.io/about.html">About</a><br>
                <a href="https://kushalsamant.github.io/people.html">People</a><br>
                <a href="https://kushalsamant.github.io/projects.html">Projects</a><br>
                <a href="https://kushalsamant.github.io/contact.html">Contact</a><br>
             </p>
--->
          </div>
       </header>
       <section>
@@ -73,6 +71,7 @@
             <a href="https://redbubble.com/people/kvshvl-/shop?asc=u&ref=account-nav-dropdown" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoredbubble.png" alt="Redbubble" width="30"></a>
             <a href="https://sketchfab.com/3d-models/shlvng-complete-cutting-files-guide-135b548e7c5e4b28a0aae1777c99840e" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosketchfab.png" alt="Sketchfab" width="30"></a>
             <a href="https://shutterstock.com/g/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoshutterstock.png" alt="Shutterstock" width="30"></a>
+            <a href="https://soundcloud.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosoundcloud.png" alt="Soundcloud" width="30"></a>
             <a href="https://society6.com/yourmailproject" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
             <a href="https://society6.com/samant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
             <a href="https://society6.com/kushaldsamant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6  png" alt="Society6" width="30"></a>
