--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,8 @@
                </p>
             <div class="roadmap-spacer-2"></div>
             <a href="https://kushalsamant.github.io/anthologies.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a>
+            <a href="https://redbubble.com/people/kvshvl-/shop?asc=u&ref=account-nav-dropdown" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoredbubble.png" alt="Redbubble" width="30"></a>
+            <a href="https://kvshvl.threadless.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logothreadless.png" alt="Threadless" width="30"></a>
 <!--
             <a href="https://stock.adobe.com/contributor/212199501/KVSHVL" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoadobe.png" alt="Adobe" width="30"></a>
             <a href="https://alamy.com/portfolio/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoalamy.png" alt="Alamy" width="30"></a>
@@ -89,6 +91,6 @@
 <!-- Fotomoto tag start-->
    <script type="text/javascript" src="//widget.fotomoto.com/stores/script/655edc7d210bd907c7c41d52956d234dddd5e6de.js"></script>
    <noscript>If Javascript is disabled in your browser, to place orders please visit the page where I <a href="https://my.fotomoto.com/store/655edc7d210bd907c7c41d52956d234dddd5e6de">sell my photos</a>, powered by <a href='https://my.fotomoto.com'>Fotomoto</a>.</noscript>
-<!-- Fotomoto tag start-->
+<!-- Fotomoto tag end-->
 </body>
 </html>
