--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,11 +47,10 @@
       </section>
       <footer>
          <div class="grid-item">
-            <div class="roadmap-spacer-1"></div>
-               <p>
-                  <a class="btn" href="https://kushalsamant.github.io/starthere.html">Start Here&nbsp;&#60;</a><br>
-               </p>
-            <div class="roadmap-spacer-2"></div>
+               <a href="https://kushalsamant.github.io/contact.html">Contact</a><br>
+               <a href="https://kushalsamant.github.io/contact.html">Terms of Service Policy</a><br>
+               <a href="https://kushalsamant.github.io/contact.html">Privacy Policy</a><br>
+               <a href="https://kushalsamant.github.io/contact.html">Cancallation & Refund Policy</a><br>
             <a href="https://kushalsamant.github.io/anthologies.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a>
             <a href="https://redbubble.com/people/kvshvl-/shop?asc=u&ref=account-nav-dropdown" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoredbubble.png" alt="Redbubble" width="30"></a>
             <a href="https://kvshvl.threadless.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logothreadless.png" alt="Threadless" width="30"></a>
@@ -88,9 +87,5 @@
          </div>
       </footer>
    </div>
-<!-- Fotomoto tag start-->
-   <script type="text/javascript" src="//widget.fotomoto.com/stores/script/655edc7d210bd907c7c41d52956d234dddd5e6de.js"></script>
-   <noscript>If Javascript is disabled in your browser, to place orders please visit the page where I <a href="https://my.fotomoto.com/store/655edc7d210bd907c7c41d52956d234dddd5e6de">sell my photos</a>, powered by <a href='https://my.fotomoto.com'>Fotomoto</a>.</noscript>
-<!-- Fotomoto tag end-->
 </body>
 </html>
