--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,13 +47,16 @@
       </section>
       <footer>
          <div class="grid-item">
-               <a href="https://kushalsamant.github.io/contact.html">Contact</a><br>
-               <a href="https://kushalsamant.github.io/contact.html">Terms of Service Policy</a><br>
-               <a href="https://kushalsamant.github.io/contact.html">Privacy Policy</a><br>
-               <a href="https://kushalsamant.github.io/contact.html">Cancallation & Refund Policy</a><br>
+            <div class="roadmap-spacer-1"></div>
+               <p>
+                  <a class="btn" href="https://kushalsamant.github.io/starthere.html">Start Here&nbsp;&#60;</a><br>
+               </p>
+            <div class="roadmap-spacer-2"></div>
+               <a href="https://kushalsamant.github.io/customersupport.html">Customer Support</a><br>
+               <a href="https://kushalsamant.github.io/termsofservicepolicy.html">Terms of Service Policy</a><br>
+               <a href="https://kushalsamant.github.io/privacypolicy.html">Privacy Policy</a><br>
+               <a href="https://kushalsamant.github.io/cancellationandrefundpolicy.html">Cancallation & Refund Policy</a><br>
             <a href="https://kushalsamant.github.io/anthologies.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a>
-            <a href="https://redbubble.com/people/kvshvl-/shop?asc=u&ref=account-nav-dropdown" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoredbubble.png" alt="Redbubble" width="30"></a>
-            <a href="https://kvshvl.threadless.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logothreadless.png" alt="Threadless" width="30"></a>
 <!--
             <a href="https://stock.adobe.com/contributor/212199501/KVSHVL" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoadobe.png" alt="Adobe" width="30"></a>
             <a href="https://alamy.com/portfolio/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoalamy.png" alt="Alamy" width="30"></a>
