--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,6 @@
                <a href="https://kushalsamant.github.io/about.html">About</a><br>
                <a href="https://kushalsamant.github.io/people.html">People</a><br>
                <a href="https://kushalsamant.github.io/projects.html">Projects</a><br>
-               <a href="https://kushalsamant.github.io/contact.html">Contact</a><br>
             </p>
          </div>
       </header>
@@ -52,11 +51,11 @@
                   <a class="btn" href="https://kushalsamant.github.io/starthere.html">Start Here&nbsp;&#60;</a><br>
                </p>
             <div class="roadmap-spacer-2"></div>
-               <a href="https://kushalsamant.github.io/customersupport.html">Customer Support</a><br>
+               <a href="https://kushalsamant.github.io/contact.html">Customer Support</a><br>
                <a href="https://kushalsamant.github.io/termsofservicepolicy.html">Terms of Service Policy</a><br>
                <a href="https://kushalsamant.github.io/privacypolicy.html">Privacy Policy</a><br>
                <a href="https://kushalsamant.github.io/cancellationandrefundpolicy.html">Cancallation & Refund Policy</a><br>
-            <a href="https://kushalsamant.github.io/anthologies.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a>
+            <a href="https://kushalsamant.github.io/anthologies.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a><br>
 <!--
             <a href="https://stock.adobe.com/contributor/212199501/KVSHVL" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoadobe.png" alt="Adobe" width="30"></a>
             <a href="https://alamy.com/portfolio/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoalamy.png" alt="Alamy" width="30"></a>
