--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
                   <a class="btn" href="https://kushalsamant.github.io/starthere.html">Start Here&nbsp;&#60;</a><br>
                </p>
             <div class="roadmap-spacer-2"></div>
-            <a href="https://kushalsamant.github.io/anthologies.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a> | <a href="https://kushalsamant.github.io/termsofservicepolicy.html">Terms of Service Policy</a> | <a href="https://kushalsamant.github.io/privacypolicy.html">Privacy Policy</a> | <a href="https://kushalsamant.github.io/cancellationandrefundpolicy.html">Cancallation & Refund Policy</a><br>
+            <a href="https://kushalsamant.github.io/anthology.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a> | <a href="https://kushalsamant.github.io/termsofservicepolicy.html">Terms of Service Policy</a> | <a href="https://kushalsamant.github.io/privacypolicy.html">Privacy Policy</a> | <a href="https://kushalsamant.github.io/cancellationandrefundpolicy.html">Cancallation & Refund Policy</a><br>
 <!--
             <a href="https://stock.adobe.com/contributor/212199501/KVSHVL" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoadobe.png" alt="Adobe" width="30"></a>
             <a href="https://alamy.com/portfolio/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoalamy.png" alt="Alamy" width="30"></a>
