--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,7 @@
             <a href="https://raspberrycreekfabrics.com/collections/studio-kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoraspberrycreekfabrics.png" alt="Raspberry Creek Fabrics" width="30"></a>
             <a href="https://redbubble.com/people/kvshvl-/shop?asc=u&ref=account-nav-dropdown" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoredbubble.png" alt="Redbubble" width="30"></a>
             <a href="https://sketchfab.com/3d-models/shlvng-complete-cutting-files-guide-135b548e7c5e4b28a0aae1777c99840e" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosketchfab.png" alt="Sketchfab" width="30"></a>
+			<a href="https://311290.myshopify.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoshopify.png" alt="Shopify" width="30"></a>
             <a href="https://shutterstock.com/g/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoshutterstock.png" alt="Shutterstock" width="30"></a>
             <a href="https://soundcloud.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosoundcloud.png" alt="Soundcloud" width="30"></a>
             <a href="https://society6.com/yourmailproject" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
