--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@
             <a href="https://payhip.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopayhip.png" alt="Payhip" width="30"></a>
             <a href="https://pexels.com/@kushal-samant-1609529511/" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopexels.png" alt="Pexels" width="30"></a>
             <a href="https://in.pinterest.com/kvshvl/_saved/" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopinterest.png" alt="Pinterest" width="30"></a>
-            <a href="https://geometry.printify.me/products/1" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logogeometry.png" alt="Geometry" width="30"></a>
+            <a href="https://geometry.printify.me/products/1" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoprintify.png" alt="printify" width="30"></a>
             <a href="https://raspberrycreekfabrics.com/collections/studio-kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoraspberrycreekfabrics.png" alt="Raspberry Creek Fabrics" width="30"></a>
             <a href="https://redbubble.com/people/kvshvl-/shop?asc=u&ref=account-nav-dropdown" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoredbubble.png" alt="Redbubble" width="30"></a>
             <a href="https://sketchfab.com/3d-models/shlvng-complete-cutting-files-guide-135b548e7c5e4b28a0aae1777c99840e" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosketchfab.png" alt="Sketchfab" width="30"></a>
@@ -75,8 +75,9 @@
             <a href="https://soundcloud.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosoundcloud.png" alt="Soundcloud" width="30"></a>
             <a href="https://society6.com/yourmailproject" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
             <a href="https://society6.com/samant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
-            <a href="https://society6.com/kushaldsamant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6  png" alt="Society6" width="30"></a>
-            <a href="https://www.stocksy.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logostocksy.png" alt="Stocksy" width="30"></a>
+            <a href="https://society6.com/kushaldsamant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
+            <a href="https://www.spoonflower.com/profiles/geometry?sub_action=shop" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logospoonflower.png" alt="Spoonflower" width="30"></a>
+			<a href="https://www.stocksy.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logostocksy.png" alt="Stocksy" width="30"></a>
             <a href="https://kvshvl.substack.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosubstack.png" alt="Substack" width="30"></a>
             <a href="https://teepublic.com/user/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoteepublic.png" alt="Tee Public" width="30"></a>
             <a href="https://my-store-3157273.creator-spring.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoteespring.png" alt="Teespring" width="30"></a>
