--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
 <head>
-   <style>
-      html {scroll-behavior: smooth; } /* Enable smooth scrolling for the entire page */
-   </style>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KXDZLM4W');</script>
+<!-- End Google Tag Manager -->
 <!-- Google tag (gtag.js) start-->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-0LNSC1VBGQ"></script>
 <script>
@@ -17,6 +21,9 @@
 <!-- Impact tag start-->
    <meta name='impact-site-verification' value='406b4bdb-6dd4-4bc5-8ec1-37530d818b69'>
 <!-- Impact tag end-->
+   <style>
+      html {scroll-behavior: smooth; } /* Enable smooth scrolling for the entire page */
+   </style>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="author" content="Kushal Samant">
@@ -28,7 +35,11 @@
    <title>KVSHVL</title>
 </head>
 <body>
-   <div class="grid-container">
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KXDZLM4W"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+  <div class="grid-container">
       <header>
          <div class="grid-item">
          <h1><a href="https://kushalsamant.github.io">KVSHVL</a></h1>
