--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          <div class="grid-item">
             <div class="roadmap-spacer-1"></div>
                <p>
-                  <a class="btn" href="https://kushalsamant.github.io/starthere.html">Start Here&nbsp;&#60;</a><br>
+                  <a class="btn" href="https://github.com/kushalsamant/ask#readme">Start Here&nbsp;&#60;</a><br>
                </p>
             <div class="roadmap-spacer-2"></div>
            <a href="https://kushalsamant.github.io/anthology.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a>
