--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          <div class="grid-item">
             <div class="roadmap-spacer-1"></div>
                <p>
-                  <a class="btn" href="https://github.com/kushalsamant/ask#readme">Start Here&nbsp;&#60;</a><br>
+                  <a class="btn" href="https://www.patreon.com/c/kvshvl">Start Here&nbsp;&#60;</a><br>
                </p>
             <div class="roadmap-spacer-2"></div>
             <a href="https://instagram.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoinstagram.png" alt="Instagram" width="30"></a>
