--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          <div class="grid-item">
             <div class="roadmap-spacer-1"></div>
                <p>
-                  <a class="btn" href="https://www.patreon.com/c/kvshvl">Start Here&nbsp;&#60;</a><br>
+                  <a class="btn" href="https://kushalsamant.github.io/starthere.html">Start Here&nbsp;&#60;</a><br>
                </p>
             <div class="roadmap-spacer-2"></div>
             <a href="https://youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoyoutube.png" alt="YouTube" width="30"></a>
