--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,12 +57,10 @@
         </section>
         <footer>
             <div class="grid-item">
-                <p>
-                    <a href="https://kushalsamant.github.io/about.html">About</a><br>
-                    <a href="https://kushalsamant.github.io/people.html">People</a><br>
-                    <a href="https://kushalsamant.github.io/projects.html">Projects</a><br>
+                    <a href="https://kushalsamant.github.io/about.html">About</a> | 
+                    <a href="https://kushalsamant.github.io/people.html">People</a> | 
+                    <a href="https://kushalsamant.github.io/projects.html">Projects</a> | 
                     <a href="https://kushalsamant.github.io/contact.html">Contact</a><br>
-                </p>
                 <a href="https://youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoyoutube.png" alt="YouTube" width="30"></a>
                 <a href="https://twitter.com/kvshvl_" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logotwitter.png" alt="Twitter" width="30"></a>
                 <a href="https://in.pinterest.com/kvshvl/_saved/" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopinterest.png" alt="Pinterest" width="30"></a>
