--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,12 @@
                     <a class="btn" href="https://kushalsamant.github.io/starthere.html">Start Here&nbsp;&#60;</a><br>
                 </p>
                 <div class="roadmap-spacer-2"></div>
+                <p>
+                    <a href="https://kushalsamant.github.io/about.html">About</a><br>
+                    <a href="https://kushalsamant.github.io/people.html">People</a><br>
+                    <a href="https://kushalsamant.github.io/projects.html">Projects</a><br> 
+                    <a href="https://kushalsamant.github.io/contact.html">Contact</a><br>
+                </p>
             </div>
         </header>
         <section>
@@ -57,10 +63,6 @@
         </section>
         <footer>
             <div class="grid-item">
-                    <a href="https://kushalsamant.github.io/about.html">About</a> | 
-                    <a href="https://kushalsamant.github.io/people.html">People</a> | 
-                    <a href="https://kushalsamant.github.io/projects.html">Projects</a> | 
-                    <a href="https://kushalsamant.github.io/contact.html">Contact</a><br>
                 <a href="https://youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoyoutube.png" alt="YouTube" width="30"></a>
                 <a href="https://twitter.com/kvshvl_" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logotwitter.png" alt="Twitter" width="30"></a>
                 <a href="https://in.pinterest.com/kvshvl/_saved/" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopinterest.png" alt="Pinterest" width="30"></a>
