--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,6 +88,13 @@
                     <a href="https://youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoyoutube.png" alt="YouTube" width="30"></a>
                     -->
                 <!--
+<div class="roadmap-spacer-1"></div>
+	<p>
+		<a class="btn" href="https://kushalsamant.github.io/starthere.html">Start Here&nbsp;&#60;</a><br>
+	</p>
+<div class="roadmap-spacer-2"></div>
+                    -->
+                <!--
                     Comment out things using these annotations
                     -->
             </div>
