--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,8 @@
                     <a href="https://kushalsamant.github.io/about.html">About</a><br>
                     <a href="https://kushalsamant.github.io/people.html">People</a><br>
                     <a href="https://kushalsamant.github.io/projects.html">Projects</a><br>
-                    <a href="https://kushalsamant.github.io/contact.html">Contact</a><br>
+                    <a href="https://kushalsamant.github.io/getintouch.html">Get&nbsp;In&nbsp;Touch</a><br>
+                    <a href="https://kushalsamant.github.io/policiesandterms.html">Policies&nbsp;&&nbsp;Terms</a><br>
                 </p>
             </div>
         </header>
