--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
                     <a href="https://kushalsamant.github.io/people.html">People</a><br>
                     <a href="https://kushalsamant.github.io/projects.html">Projects</a><br>
                     <a href="https://kushalsamant.github.io/getintouch.html">Get&nbsp;In&nbsp;Touch</a><br>
-                    <a href="https://kushalsamant.github.io/policiesandterms.html">Policies&nbsp;&&nbsp;Terms</a><br>
+                    <a href="https://kushalsamant.github.io/legal.html">Legal</a><br>
                 </p>
             </div>
         </header>
