--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,8 +47,8 @@
                     <a href="https://kushalsamant.github.io/about.html">About</a><br>
                     <a href="https://kushalsamant.github.io/people.html">People</a><br>
                     <a href="https://kushalsamant.github.io/projects.html">Projects</a><br>
-                    <a href="https://kushalsamant.github.io/legal.html">Legal</a><br>
                     <a href="https://kushalsamant.github.io/getintouch.html">Get&nbsp;In&nbsp;Touch</a><br>
+                    <a href="https://kushalsamant.github.io/legal.html">Terms&nbsp;&&nbsp;Conditions</a><br>
                 </p>
             </div>
         </header>
