--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
                     <a href="https://kushalsamant.github.io/people.html">People</a><br>
                     <a href="https://kushalsamant.github.io/projects.html">Projects</a><br>
                     <a href="https://kushalsamant.github.io/getintouch.html">Get&nbsp;In&nbsp;Touch</a><br>
-                    <a href="https://kushalsamant.github.io/termsandconditions.html">Terms&nbsp;of&nbsp;Use</a>.
+                    <a href="https://kushalsamant.github.io/termsandconditions.html">Terms&nbsp;of&nbsp;Use</a><br>
                 </p>
             </div>
         </header>
