--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
               <!--
                     <div class="roadmap-spacer-1"></div>
                     	<p>
-                    		<a class="btn" href="https://kushalsamant.github.io/starthere.html">Start Here&nbsp;&#60;</a><br>
+                    		<a class="btn" href="https://ask.setmore.com">Book&nbsp;1:1&nbsp;Consultation&nbsp;Here&nbsp;&#60;</a><br>
                     	</p>
                     <div class="roadmap-spacer-2"></div>
 
