--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,10 +45,8 @@
                 <h1><a href="https://kushalsamant.github.io">KVSHVL</a></h1>
                 <p>
                     <a href="https://kushalsamant.github.io/about.html">About</a><br>
-                    <a href="https://kushalsamant.github.io/people.html">People</a><br>
-                    <a href="https://kushalsamant.github.io/projects.html">Projects</a><br>
                     <a href="https://kushalsamant.github.io/getintouch.html">Get&nbsp;In&nbsp;Touch</a><br>
-                    <a href="https://kushalsamant.github.io/termsofuse.html">Terms&nbsp;of&nbsp;Use</a><br>
+                    <a href="https://kushalsamant.github.io/1on1consultation.html">1:1&nbsp;Consultation</a><br>
                 </p>
             </div>
         </header>
