--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,8 +45,8 @@
                 <h1><a href="https://kushalsamant.github.io">KVSHVL</a></h1>
                 <p>
                     <a href="https://kushalsamant.github.io/about.html">About</a><br>
+                    <a href="https://kushalsamant.github.io/anthology.html">Anthology</a><br>
                     <a href="https://kushalsamant.github.io/getintouch.html">Get&nbsp;In&nbsp;Touch</a><br>
-                    <a href="https://kushalsamant.github.io/1on1consultation.html">1:1&nbsp;Consultation</a><br>
                 </p>
             </div>
         </header>
