--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,11 @@
                     <a href="https://kushalsamant.github.io/projects.html">Projects</a><br>
                     <a href="https://kushalsamant.github.io/getintouch.html">Get&nbsp;In&nbsp;Touch</a><br>
                 </p>
+                <div class="roadmap-spacer-1"></div>
+                   <p>
+                        <a class="btn" href="https://kushalsamant.github.io/services.html">Services&#60;</a><br>
+                    </p>
+                <div class="roadmap-spacer-2"></div>
             </div>
         </header>
         <section>
@@ -58,11 +63,7 @@
         </section>
         <footer>
             <div class="grid-item">
-                <div class="roadmap-spacer-1"></div>
-                   	<p>
-                   		<a class="btn" href="https://kushalsamant.github.io/services.html">Services&#60;</a><br>
-                   	</p>
-                <div class="roadmap-spacer-2"></div>
+                <a href="https://kushalsamant.github.io/anthology.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a>.  
 <!--
 Comment out things using these annotations
 -->
