--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
         </section>
         <footer>
             <div class="grid-item">
-                <a href="https://kushalsamant.github.io/anthology.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a>.  
+                <a href="https://kushalsamant.github.io/anthology.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a>
 <!--
 Comment out things using these annotations
 -->
