--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,11 +47,10 @@
                     <a href="https://kushalsamant.github.io/about.html">About</a><br>
                     <a href="https://kushalsamant.github.io/people.html">People</a><br>
                     <a href="https://kushalsamant.github.io/projects.html">Projects</a><br>
-                    <a href="https://kushalsamant.github.io/getintouch.html">Get&nbsp;In&nbsp;Touch</a><br>
                 </p>
                 <div class="roadmap-spacer-1"></div>
                    <p>
-                        <a class="btn" href="https://kushalsamant.github.io/services.html">Services&#60;</a><br>
+                        <a class="btn" href="https://kushalsamant.github.io/getintouch.html">Get&nbsp;In&nbsp;Touch</a><br>
                     </p>
                 <div class="roadmap-spacer-2"></div>
             </div>
