--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,13 +62,33 @@
         </section>
         <footer>
             <div class="grid-item">
-                <a href="https://kushalsamant.github.io/anthology.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a>
-                <a href="https://kushalsamant.github.io/anthology.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a>
-                <a href="https://kushalsamant.github.io/anthology.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a>
-                <a href="https://kushalsamant.github.io/anthology.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a>
-<!--
-Comment out things using these annotations
--->
+                <a href="https://stock.adobe.com/contributor/212199501/KVSHVL" rel="noopener noreferrer" target="_blank">Adobe</a>/
+                <a href="https://airbnb.co.in/users/show/21563871" rel="noopener noreferrer" target="_blank">Airbnb</a>/
+                <a href="https://alamy.com/portfolio/kvshvl" rel="noopener noreferrer" target="_blank">Alamy</a>/
+                <a href="https://kushalsamant.github.io/anthology.html" rel="noopener noreferrer" target="_blank">Anthology</a>/
+                <a href="https://behance.net/kvshvl" rel="noopener noreferrer" target="_blank">Behance</a>/
+                <a href="https://contrado.com/stores/kvshvl" rel="noopener noreferrer" target="_blank">Contrado</a>/
+                <a href="https://kvshvl.gumroad.com" rel="noopener noreferrer" target="_blank">Gumroad</a>/
+                <a href="https://news.ycombinator.com/user?id=kvshvl" rel="noopener noreferrer" target="_blank">Hacker News</a>/
+                <a href="https://patreon.com/c/kvshvl" rel="noopener noreferrer" target="_blank">Patreon</a>/
+                <a href="https://kvshvl.setmore.com" rel="noopener noreferrer" target="_blank">Setmore</a>/
+                <a href="https://sketchfab.com/3d-models/shelving-complete-cutting-files-guide-135b548e7c5e4b28a0aae1777c99840e" rel="noopener noreferrer" target="_blank">Sketchfab</a>/
+                <a href="https://311290.myshopify.com" rel="noopener noreferrer" target="_blank">Shopify</a>/
+                <a href="https://spoonflower.com/profiles/geometry?sub_action=shop" rel="noopener noreferrer" target="_blank">Spoonflower</a>/
+                <a href="https://shutterstock.com/g/kvshvl" rel="noopener noreferrer" target="_blank">Shutterstock</a>/
+                <a href="https://soundcloud.com/kvshvl" rel="noopener noreferrer" target="_blank">Soundcloud</a>/
+                <a href="https://my-store-3157273.creator-spring.com" rel="noopener noreferrer" target="_blank">Teespring</a>/
+                <a href="https://kvshvl.threadless.com" rel="noopener noreferrer" target="_blank">Threadless</a>/
+                <a href="https://twitch.tv/kvshvl" rel="noopener noreferrer" target="_blank">Twitch</a>/
+                <a href="https://twitter.com/kvshvl_" rel="noopener noreferrer" target="_blank">Twitter</a>
+
+                <!--
+                <a href="https://kushalsamant.github.io/anthology.html"><img src="/assets/img/logokvshvl.png" alt="Anthology" width="30"></a>
+                -->
+
+                <!--
+                Comment out things using these annotations
+                -->
             </div>
         </footer>
     </div>
